<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="xn_inputfunction_select">图片@拍照@评价</string>
    <string name="xn_find_mylocation">寻找我的位置</string>
    <string name="xn_recent_person">最近联系人</string>
    <string name="xn_noevaluat">您还不能对本次会话进行评价，谢谢！</string>
    <string name="xn_require_evaluation">请您对本次会话进行评价，谢谢！</string>
    <string name="xn_evaluated">您对本次会话已经评价过了，谢谢！</string>
    <string name="xn_ad_appraise_vg">非常好</string>
    <string name="xn_ad_appraise_good">好</string>
    <string name="xn_ad_appraise_normal">一般</string>
    <string name="xn_ad_appraise_bad">差</string>
    <string name="xn_ad_appraise_vb">非常差</string>
    <string name="xn_ad_appraise_cancel">返回</string>
    <string name="xn_ad_appraise_submit">提交</string>
    <string name="xn_showphoto_title">发送中...</string>
    <string name="xn_chatpage_kfname">客户名称</string>
    <string name="xn_histalk_last">上一次会话</string>
    <string name="xn_histalk_next">下一次会话</string>
    <string name="xn_mylocation">我的位置</string>
    <string name="xn_custom_send">发送</string>
    <string name="xn_custom_record">按住 说话</string>
    <string name="xn_leave_message">留言</string>
    <string name="xn_toast_nointernet">当前无网络连接</string>
    <string name="xn_toast_netexception">当前网络异常</string>
    <string name="xn_toast_sendfail">发送失败</string>
    <string name="xn_toast_getservicefail">获取服务器列表失败</string>
    <string name="xn_toast_errorinput">请不要输入空字符</string>
    <string name="xn_toast_nonet">没有网络连接</string>
    <string name="xn_toast_submit">提交</string>
    <string name="xn_toast_cancel">返回</string>
    <string name="xn_toast_authority">亲还没开启录音权限哦</string>
    <string name="xn_toast_callcsfalse">获取客服失败</string>
    <string name="xn_toast_paramserror">传入参数错误</string>
    <string name="xn_toast_formaterror">传入JSON字符串格式错误</string>
    <string name="xn_text_pulldown">下拉刷新</string>
    <string name="xn_text_refresh">正在刷新...</string>
    <string name="xn_text_recentlyupdate">最近更新:</string>
    <string name="xn_toast_filempty">录音文件不完整或已损坏</string>
    <string name="xn_action_Tchat">由于你长时间未进行会话,已经与客服断开连接</string>
    <string name="xn_tt_leavemsgtip_content">请输入留言内容</string>
    <string name="xn_tt_leavemsgtip_nikname">请输入昵称</string>
    <string name="xn_tt_leavemsgtip_phoneormail">请输入手机号码或者邮箱</string>
    <string name="xn_tt_leavemsgtip_truephone">请输入正确的手机号码</string>
    <string name="xn_tt_leavemsgtip_success">留言成功,我们会尽快联系您</string>
    <string name="xn_tt_leavemsgtip_failed">留言失败,连接服务器失败</string>
    <string name="xn_tt_voicetip_tooshort">时间太短   录音失败</string>
    <string name="xn_valuationtip_hasposted">您的评价已提交.</string>
    <string name="xn_tt_sdcardtip_nofindsdcard">内存卡不存在</string>
    <string name="xn_tt_cameratip_nofindapplication">没有找到相关应用</string>
    <string name="xn_tt_cameratip_photoismissing">图片丢失</string>
    <string name="xn_tt_cameratip_iscanceled">拍照已取消</string>
    <string name="xn_tt_openspecifiedactivity_fail">可以在这里提示用户没有找到应用程序，或者是做其他的操作！</string>
    <string name="xn_tt_clearcache_success">成功清空本地缓存...</string>
    <string name="xn_tt_savepicture_success">保存成功</string>
    <string name="xn_notify_newmsg">您有新消息哦！</string>

</resources>